# newcurso-django

./: Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: cd.bkp  ci.bkp  curso-djangoCI.bkpyml  docker-push.bkp  newCI.bkp
pypro/: settings.py
pypro/base/: test_home.py  views.py
