[tool.poetry]
name = "newcurso-django"
version = "0.1.0"
description = "Código desenvolvido no módulo de Django do Site Python Pro"
authors = ["Sergio Scripnic <scripnic@outlook.com>"]
license = "GNUv3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "*"
gunicorn = "*"
python-decouple = "*"
dj-database-url = "*"
psycopg2-binary = "*"
django-s3-folder-storage = "*"
collectfast = "*"
django-debug-toolbar = "*"
sentry-sdk = "*"
django-ordered-model = "*"
ipython = "*"
django-extensions = "*"


[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest-cov = "*"
codecov = "*"
pytest-django = "*"
model-mommy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
